--- a/Genetic_Algorithm.ipynb
+++ b/Genetic_Algorithm.ipynb
@@ -42,6 +42,18 @@
    "outputs": [],
    "source": [
     "def point_mutation(bitstring, rate):\n",
+    "    '''\n",
+    "    Description:\n",
+    "        Randomly change a bit inside of a particular child\n",
+    "\n",
+    "    Input:\n",
+    "        bitstring(list): list of bits\n",
+    "        rate(dbl): the rate at which the mutation happens\n",
+    "\n",
+    "    Output:\n",
+    "        child(list): the bitstring with possible mutations from the original\n",
+    "    '''\n",
+    "    # Randomly change biots within the child \n",
     "    child = bitstring.copy()\n",
     "    for idx, j in enumerate(bitstring):\n",
     "        if random.uniform(0, 1) < rate:\n",
@@ -53,6 +65,22 @@
     "    return child\n",
     "\n",
     "def crossover(parent1, parent2, rate):\n",
+    "    '''\n",
+    "    Description:\n",
+    "        mutate a new child based off of the combination of two parents.\n",
+    "\n",
+    "    Input:\n",
+    "        parent1(list): list of bitstrings\n",
+    "        parent2(list): list of bitstrings\n",
+    "        rate(dbl): the rate at which the muatation happens. If a random number\n",
+    "        is greater than the rate, no mutation will occur.\n",
+    "\n",
+    "    Output:\n",
+    "        a possible combination of the two parents.\n",
+    "    '''\n",
+    "    # If the mutation rate is lower than the overall rate,\n",
+    "    # take part of parent 1 and part of parent two and combine them \n",
+    "    # into a new child\n",
     "    if random.uniform(0, 1) >= rate:\n",
     "        return parent1\n",
     "    else:\n",
@@ -60,7 +88,22 @@
     "        return parent1[0:point]+parent2[point:len(parent2)]\n",
     "\n",
     "def reproduce(selected, pop_size, p_cross, p_mutation):\n",
+    "    '''\n",
+    "    Description:\n",
+    "        Take parent strings a combine them combine/mutate them into children strings.\n",
+    "\n",
+    "    Input:\n",
+    "        selected(list): list of dictionaries that are potential best strings\n",
+    "        pop_size(int): number of candiadtes to consider\n",
+    "        p_cross(dbl): rate at which the parent to parent crossover happens\n",
+    "        p_mutation(dbl): rate at which the single point mutation will happen\n",
+    "\n",
+    "    Output:\n",
+    "        children(list): list of all the children created from the parents.\n",
+    "    '''\n",
     "    children = []\n",
+    "    # Selects the items before (Odd indicies) and after (even indicies) \n",
+    "    # for mutation later\n",
     "    for i, p1 in enumerate(selected):\n",
     "        if i % 2 == 0:\n",
     "            p2 = selected[i+1]\n",
@@ -71,7 +114,10 @@
     "            p2 = selected[0]\n",
     "\n",
     "        child = {}\n",
+    "        # Tries to combine the two parents into new children\n",
     "        child['bitstring'] = crossover(p1['bitstring'], p2['bitstring'], p_cross)\n",
+    "\n",
+    "        # Randomly mutates points within the child\n",
     "        child['bitstring'] = point_mutation(child['bitstring'], p_mutation)\n",
     "        children.append(child)\n",
     "    \n",
@@ -81,32 +127,89 @@
     "    return children\n",
     "\n",
     "def binary_tournament(pop):\n",
+    "    '''\n",
+    "    Description:\n",
+    "        The function will randomly select two different lists from the population pool.\n",
+    "        It will then compared the cost of the two list against each other. Which ever\n",
+    "        list has a better cost, they get selected and move on in the selection process.\n",
+    "\n",
+    "    Input:\n",
+    "        pop(list): List of dictionaries containing the cost and bits for each item under\n",
+    "        consideration\n",
+    "\n",
+    "    Output:\n",
+    "        dictionary contating the list that won the \"tournament\"\n",
+    "\n",
+    "        {bitstring: [],\n",
+    "         fitness: int}\n",
+    "    '''\n",
+    "    # Randomly select two bitstrings from the overall list\n",
     "    i, j = random.randint(0, (len(pop)-1)), random.randint(0, (len(pop)-1))\n",
     "\n",
+    "    # Check to see if the indicies are the same\n",
     "    while i == j:\n",
     "        j =  random.randint(0, len(pop)-1)\n",
     "\n",
+    "    # Select the string with the highest cost to move forward.\n",
     "    if pop[i]['fitness'] >= pop[j]['fitness']:\n",
     "        return pop[i]\n",
     "    else: \n",
     "        return pop[j]\n",
     "\n",
     "def onemax(bitstring):\n",
+    "    '''\n",
+    "    The cost of the algorithm is the sum of the bits (Trying to obtain all 1's)\n",
+    "    '''\n",
     "    return sum(bitstring)\n",
     "\n",
     "def random_bitstring(num_bits):\n",
+    "    '''\n",
+    "    Description:\n",
+    "        Create a random list of bits (0 or 1)\n",
+    "\n",
+    "    Input:\n",
+    "        num_bits(int): the number of bits contained in the list\n",
+    "\n",
+    "    Output:\n",
+    "        A list of randomly generated bits.\n",
+    "    '''\n",
     "    return [1 if random.uniform(0, 1) < .50 else 0 for i in range(num_bits)]\n",
     "\n",
     "def search(max_gens, num_bits, pop_size, p_crossover, p_mutation):\n",
+    "'''\n",
+    "Description:\n",
+    "    This function contians the main logic of the program. It will search through\n",
+    "    the various combinations of children and parents to find a soultion that will\n",
+    "    optimize the given cost functions. In this case, the optimal solution is a \n",
+    "    list of all ones.\n",
+    "\n",
+    "Input:\n",
+    "    max_gens(int): The number of generations to loop through to find an optimal\n",
+    "    solution.\n",
+    "    num_bits(int): The number of bits contained in the list\n",
+    "    pop_size(int): The number of children to be children to be considered against the parent.\n",
+    "    p_crossover(dbl): THe probability of keeping the parent vs mixing aprent and child.\n",
+    "        ex) p_crossover = .99; probability of keeping parent to next generation = .01\n",
+    "    p_mutation(dbl): The probability of changing a single position in a list.\n",
+    "\n",
+    "Output:\n",
+    "    best(list): A list of a possible optimal solution.  \n",
+    "'''\n",
+    "    # Create a random set of possible solutions\n",
     "    population = [{'bitstring':random_bitstring(num_bits)} for i in range(pop_size)]\n",
     "    \n",
+    "    # Find the \"cost\" of each colution\n",
     "    for idx,_ in enumerate(population):\n",
     "        population[idx]['fitness'] = onemax(population[idx]['bitstring'])\n",
     "\n",
+    "    # Sort the lists to find the solution with the highest cost, and keep the largest as the best solution\n",
     "    best = sorted(population, key=itemgetter('fitness'), reverse=True)[0]\n",
     "\n",
+    "    # Loop through the number of generations\n",
     "    for gen in range(max_gens):\n",
+    "        # Randomly select possible offspring\n",
     "        selected = [binary_tournament(population) for _ in range(len(population))]\n",
+    "        # Reproduce children based off of the parent \n",
     "        children = reproduce(selected, pop_size, p_crossover, p_mutation)\n",
     "\n",
     "        for idx,_ in enumerate(children):\n",
@@ -114,12 +217,14 @@
     "\n",
     "        sort_children =  sorted(children, key=itemgetter('fitness'), reverse=True) \n",
     "\n",
+    "        # If the best child has a higher cost than current, replace the current with child\n",
     "        if sort_children[0]['fitness'] >= best['fitness']:\n",
     "            best = sort_children[0].copy()\n",
     "\n",
     "        population = sort_children.copy()\n",
     "        print('Gen: {0}, Fitness: {1}, Best: {2} '.format(gen, best['fitness'], best['bitstring']))\n",
     "\n",
+    "        # Break out of the loop if the found the best solution before the end of the loop\n",
     "        if sum(best['bitstring']) == num_bits:\n",
     "            break\n",
     "\n",
